--- a/environment.yml
+++ b/environment.yml
@@ -2,8 +2,8 @@ name: pandas_workshop
 channels: 
     - conda-forge
 dependencies: 
-    - python=3.10.2
-    - jupyterlab=3.3.0
+    - python>=3.8.0,<=3.10.15
+    - jupyterlab=3.5.2
     - matplotlib=3.5.1
     - numpy=1.22.3
     - pandas=1.4.1
