List Python version as flexible for Binder.

--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: pandas_workshop
 channels: 
     - conda-forge
 dependencies: 
-    - python=3.11
+    - python>=3.8.0,<=3.11.10
     - jupyterlab=3.5.2
     - matplotlib=3.6.3
     - numpy=1.24.1
