Add jupyter in conda env to PATH.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -4,3 +4,6 @@ FROM mcr.microsoft.com/devcontainers/universal:${VARIANT}
 # Create the conda environment
 COPY environment.yml /tmp/conda-tmp/
 RUN conda env create --file /tmp/conda-tmp/environment.yml --quiet
+
+# Update PATH for Jupyter editing option
+ENV PATH="/opt/conda/envs/pandas_workshop/bin:${PATH}"
