--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,7 @@
 		"vscode": {
 			// Set *default* container specific settings.json values on container create.
 			"settings": {
-				"python.defaultInterpreterPath": "/opt/conda/envs/pandas_workshop"
+				"python.defaultInterpreterPath": "/home/vscode/.conda/envs/pandas_workshop"
 			},
 
 			// Add the IDs of extensions you want installed when the container is created.
