Update versions, dropping 3.9 support

--- a/environment.yml
+++ b/environment.yml
@@ -2,10 +2,10 @@ name: pandas_workshop
 channels:
     - conda-forge
 dependencies:
-    - python>=3.9.0,<=3.12.30
+    - python>=3.10.0,<=3.13.100
     - jupyterlab>=4.2.3
-    - matplotlib=3.8.4
-    - numpy=2.0.0
-    - pandas=2.2.2
-    - requests
+    - matplotlib=3.10.3
+    - numpy=2.2.6
+    - pandas=2.3.0
+    - requests>=2.32.3
     - seaborn=0.13.2
