--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: pandas_workshop
 channels:
     - conda-forge
 dependencies:
-    - python>=3.10.0,<=3.13.100
+    - python>=3.10.0,<3.14.0
     - jupyterlab>=4.2.3
     - matplotlib=3.10.3
     - numpy=2.2.6
